Translage to Norwegian

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
         <p>
         </p>
         <span class="loader-text">
-          <span class="loader-text__title">Building your radar...</span>
-          <p>Your Technology Radar will be available in just a few seconds</p>
+          <span class="loader-text__title">Klargjør teknologiradaren</span>
+          <p>Det skal ikke ta lang tid...</p>
           <div class="loader-wrapper">
             <div style="animation-delay: 0s"></div>
             <div style="animation-delay: 0.25s"></div>
