Add banner images and Oslo font

--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,18 @@
   <body>
     <div class="hero-banner">
       <div class="hero-banner__wrapper">
-        <h1 class="hero-banner__title-text">ORIGO TEKNOLOGIRADAR</h1>
+        <h1 class="hero-banner__title-text">Origo Teknologiradar</h1>
       </div>
     </div>
     <main>
       <div id="pdf-cover-page">
-        <img class="pdf-banner-image" src="/images/pdf_banner.png" alt="Pdf cover image" width="100%" height="300px" />
+        <img
+          class="pdf-banner-image"
+          src="/images/OK-pdf_banner.svg"
+          alt="Pdf cover image"
+          width="100%"
+          height="300px"
+        />
         <h1 class="pdf-title"></h1>
         <div class="pdf-powered-by-text">
           <span>Powered by</span>
@@ -29,8 +35,7 @@
         </div>
       </div>
       <div class="helper-description home-page">
-        <p>
-        </p>
+        <p></p>
         <span class="loader-text">
           <span class="loader-text__title">Klargjør teknologiradaren</span>
           <p>Det skal ikke ta lang tid...</p>
@@ -43,8 +48,7 @@
         </span>
       </div>
       <div id="error-container" class="error-container home-page"></div>
-      <div class="input-sheet-form home-page">
-      </div>
+      <div class="input-sheet-form home-page"></div>
       <div class="graph-header"></div>
       <div id="radar">
         <p class="no-blip-text">
@@ -56,7 +60,7 @@
     </main>
     <footer class="home-page">
       <p class="agree-terms">
-        Origos teknologiradar er basert på kildekode fra<br/>
+        Origos teknologiradar er basert på kildekode fra<br />
         <a href="https://www.thoughtworks.com">Thoughtworks Radar v1.1.2</a>
       </p>
     </footer>
