Update with Oslo banners

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     </div>
     <main>
       <div id="pdf-cover-page">
-        <img class="pdf-banner-image" src="/images/pdf_banner.png" alt="Pdf cover image" width="100%" height="300px" />
+        <img class="pdf-banner-image" src="/images/OK-pdf_banner.png" alt="Pdf cover image" width="100%" height="300px" />
         <h1 class="pdf-title"></h1>
         <div class="pdf-powered-by-text">
           <span>Powered by</span>
