--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
     </div>
     <main>
       <div id="pdf-cover-page">
-        <img class="pdf-banner-image" src="/images/OK-pdf_banner.png" alt="Pdf cover image" width="100%" height="300px" />
+        <img class="pdf-banner-image" src="./images/OK-pdf_banner.png" alt="Pdf cover image" width="100%" height="300px" />
         <h1 class="pdf-title"></h1>
         <div class="pdf-powered-by-text">
           <span>Powered by</span>
           <a href="https://www.thoughtworks.com">
-            <img class="pdf-tw-logo" src="/images/tw-logo.png" alt="logo" />
+            <img class="pdf-tw-logo" src="./images/tw-logo.png" alt="logo" />
           </a>
         </div>
       </div>
